--- a/index.css
+++ b/index.css
@@ -10,25 +10,33 @@
 }
 
 *{
- margin: 0;
- padding: 0;   
+    margin: 0;
+    padding: 0;  
 }
 
 body{
     background-color: #f9f9f9;
     color: #1e2a30;
+    font-family: Playfair;
 }
 
 /* Header */
 
 header{
+    width: 90%;
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     background-color: #f8f9fa;
+    position: sticky;
+    top: 0;
+    overflow: hidden;
+    border-radius: 10px;
 }
 
 .logo{
     margin-left: 5px;
+    font-size: 30px;
 }
 
 nav ul{
@@ -44,8 +52,59 @@ nav ul li{
 .nav-link{
     text-decoration: none;
     color: #1e2a30;
+    font-size: 15px;
 }
 
 .nav-link:focus{
     color: #3a5a40;
+}
+
+.nav-link:active{
+    color: #3a5a40;
+}
+
+/* Home */
+
+.home{
+    text-align: center;
+    width: 90%;
+    margin: 40px auto 0;
+    padding: 20px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
+    box-shadow: 0 0 3px #3a5a40;
+}
+
+#introduction{
+    margin: 10px 0 10px;
+    font-size: 20px;
+}
+
+#name{
+    color: #3a5a40;
+    font-weight: bold;
+}
+
+.social-media p{
+    margin-bottom: 10px;
+}
+
+.instagram{
+    color: #1e2a30;
+    margin-right: 10px;
+    text-decoration: none;
+}
+
+.profile-img{
+    margin-top: 40px;
+}
+
+.profile-img img{
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    border: 2px solid #1e2a30;
+    box-shadow: 5px 5px 0 #3a5a40;
 }
