--- a/index.css
+++ b/index.css
@@ -9,6 +9,10 @@
     src: url(Fonts/Quicksand-VariableFont_wght.ttf);
 }
 
+:root{
+    scroll-padding-top: 60px;
+}
+
 *{
     margin: 0;
     padding: 0;  
@@ -56,25 +60,25 @@ nav ul li{
 }
 
 .nav-link:focus{
-    color: #3a5a40;
+    color: #1e90ff;
 }
 
 .nav-link:active{
-    color: #3a5a40;
+    color: #1e90ff;
 }
 
 /* Home */
 
-.home{
+#home{
     text-align: center;
     width: 90%;
-    margin: 40px auto 0;
+    margin: 20px auto 0;
     padding: 20px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 10px;
-    box-shadow: 0 0 3px #3a5a40;
+    box-shadow: 0 0 3px #1e90ff;
 }
 
 #introduction{
@@ -83,7 +87,7 @@ nav ul li{
 }
 
 #name{
-    color: #3a5a40;
+    color: #1e90ff;
     font-weight: bold;
 }
 
@@ -92,9 +96,10 @@ nav ul li{
 }
 
 .instagram{
-    color: #1e2a30;
+    color: #1e90ff;
     margin-right: 10px;
     text-decoration: none;
+    font-size: 25px;
 }
 
 .profile-img{
@@ -106,5 +111,55 @@ nav ul li{
     height: 250px;
     border-radius: 50%;
     border: 2px solid #1e2a30;
-    box-shadow: 5px 5px 0 #3a5a40;
+    box-shadow: 5px 5px 0 #1e90ff;
+}
+
+/* About */
+
+#about{
+    width: 130px;
+    margin: 30px auto 0px;
+    text-align: center;
+    border-bottom: 2px solid #1e90ff;
+}
+
+.about{
+    width: 90%;
+    margin: 20px auto 0;
+    padding: 20px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-radius: 10px;
+    box-shadow: 0 0 3px #1e90ff;
+}
+
+.about-text{
+    width: 85%;
+    margin: 5px auto;
+    background-color: #caf0f8;
+    border-radius: 10px;
+}
+
+dl{
+    padding: 10px;
+}
+
+dt{
+    font-weight: bold;
+}
+
+dd{
+    border-bottom: 2px solid #1e90ff;
+    margin-bottom: 10px;
+}
+
+.about-image{
+    text-align: center;
+}
+
+.about-image img{
+    width: 300px;
+    height: 320px;
+    border-radius: 10px;
 }
