--- a/index.css
+++ b/index.css
@@ -250,3 +250,10 @@ nav ul li{
 #number{
     font-family: Arial, Helvetica, sans-serif;
 }
+
+/* Footer */
+
+footer{
+    text-align: center;
+    padding: 10px;
+}
